medp331-XL-Project1

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         Your browser does not support the audio element.
     </audio>
 
+    <script>
+        // Reduce the audio volume by 30% (set it to 0.7)
+        var audio = document.getElementById("backgroundMusic");
+        audio.volume = 0.7;  // 70% volume (30% reduction)
+    </script>
+
     <header>
         <div class="intro">
             <h1>Welcome to the Chinese Tea Ceremony</h1>
